app.css
/* ... */
#wItems  {

    font-family: proxima-nova, san serif;
    font-style: normal;
    font-weight: 300;
    font-size: 1rem;
    letter-spacing: -.005rem;
    line-height: 2rem;
}

#rItems  {
    color: #fdfdff;
    font-family: proxima-nova, san serif;
    font-style: normal;
    font-weight: 300;
    font-size: 1rem;
    letter-spacing: .1rem;
    line-height: 1rem;
}

#fItems .accordion-body {
    color: #fdfdff;
    font-family: proxima-nova, san serif;
    font-style: normal;
    font-weight: 100;
    font-size: .8rem;
    line-height: 1.1rem;
}

ul li {
    list-style: none;
}
  
ul li:before {
    content: '⬤'; 
    vertical-align: middle;
    display: inline-block;
    margin-top: -3px;
    font-size: 4px;
    margin-right: 10px;
  }

/* FAQ Component */

.accordion-body {
    padding-top: 0px;
    padding-bottom: 0px;
    position: relative;
    max-width: 30em;
}

.accordion-button {
    background-color: #0f1114;
    color: #fdfdff;
    font-family: proxima-nova, san serif;
    font-style: normal;
    font-weight: 300;
    font-size: 1rem;
    letter-spacing: .1rem;
    line-height: 2rem;
}

#accordion .collapse, #accordion .collapse.in {
  position: absolute !important;
  z-index: 20;
  width: auto;
  overflow:visible;
  background-color:#fff;
}

#accordionFlushExample {
position: absolute;
z-index: 1;
/* max-height: 23em; */
max-height: 25em;
width: 30em;
overflow-y: overlay;
}

.accordion-button:hover {
    background-color: #181F22;
}

.accordion-item {
    border: none;
    background-color: #0f1114;
}

.accordion-button:not(.collapsed) {
color: #fdfdff;
background-color: #0f1114;
/* box-shadow: inset 0 -1px 0 rgba(0,0,0,.125); */
}

.accordion-button:focus {
    z-index: 1 !important;
    border-color: #0f1114;
    box-shadow: none !important;
}

.accordion-button::after {
   
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%23fdfdff' class='bi bi-plus-lg' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z'/%3E%3C/svg%3E");
    transition: fade .3s ease-out;
}

.accordion-button:not(.collapsed)::after {
   
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%23fdfdff' class='bi bi-dash-lg' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z'/%3E%3C/svg%3E");
    transform: rotate(0deg);
}

/* .collapsing {
    -webkit-transition-delay: 0.4s;
    transition-delay: 0.4s;
    transition: height 0.4s ease;
} */

/* Icon Styles */

.item {
    padding-left: 37px; 
}

.iconCell {
   padding: none;
   width: 35px;
   height: 35px;
}

.icons {
    width: 100%;
}

.iconF {
    width: 11%;
}

#iconPhone img{
    width: 7%;
}

#iconPhone h3 {
    display: inline-flex;
    align-items: center;
}

#iconBook h3 {
    display: inline-flex;
    align-items: center;
}
#iconBook img{
    width: 1.5%;
}

#iconBook a {
    color: #f2a23000;
}

#iconBook  a:hover {
    color: #f2a230;
    text-decoration-thickness: .7px;
}

/* Icon interactions*/

.iconF:hover {
    position: relative;
    transform: translate(0px, -10px);
    transition: .3s all ease;
}
.iconF:not(:hover) {
    position: relative;
    transform: translate(0px, 0px);
    transition: .3s all ease;
}

/* Map */

.map-container-2 div {
    overflow:hidden;
    /* padding-bottom:56.25%; */
    margin-bottom:50px%;
    /* position:relative; */
}

/* .map-container-2 iframe {
     left:0;
    top:0; 
     height:100%;
    width:100%;
    position:absolute; 
} */

iframe {
    width: 95%; 
   height: 34em;
 
    /* width: 38.3em; 
    height: 29em; */
 
    /* width: 630px; 
    height: 483px; */
}

/* Footer */

footer{
   height: 10em;
}

.line-1 {
    height: .3px;
    background: #fdfdff;
    width: 87%;
}

/* jquery interactions */

.reveal.left {
    position: relative;
    transform: translate(50px,-15px);
    opacity: 0;
    transition: .8s all ease;
}
.reveal.right {
    position: relative;
    transform: translate(-50px,-15px);
    opacity: 0;
    transition: .8s all ease;
}

.reveal.bottom {
    position: relative;
    transform: translate(-7px,30px);
    opacity: 0;
    transition: .8s all ease;
}

.reveal {
    position: relative;
    transform: translate(0px,10px);
    opacity: 0;
    transition: .4s all ease;
}

.reveal.active{
    transform: translateY(0);
    opacity: 1;
}


@media (max-width: 1199px) {
    
}

@media (max-width: 991px) {

}

@media (max-width: 767px) {

}

@media (max-width: 575px) {

    .hero {
        background-image: url(./assets/imgs/hero.jpg);
        background-size: cover;
        height: 123vh;
        min-width: 100%;
        background-position: center;
    }

    #overlap .surf {
        background: #9cceb6;
        width: 100%;
        position: relative;
        float: left;
        margin-left: 30px;
        opacity: 98%;
        z-index: 9;
    }

    #overlap .hotel {
        background: #f2a230;
        width: 100%;
        position: relative;
        float: left;
        margin-left: 50px;
        opacity: 98%;
        z-index: 9;
    }
    
    #overlap .grounds {
        background: #e2642e;
        width: 100%;
        position: relative;
        float: right;
        margin-right: 50px;
        opacity: 98%;
        margin-top: 200px;
    }
    
    #overlap .westport {
        background: #d6d5c9;
        width: 100%;
        position: relative;
        transform: translateX(20%);
        opacity: 98%;
    }

    
}

